# parallel_filesearch

./: CMakeLists.txt  main.cpp
include/: file_search.h  tree_search.h
source/: file_search.cpp  tree_search.cpp
